# ai_embeddings

./: .gitignore  LICENSE  README.md  embed.py  env_template  pyproject.toml  requirements.txt
ai_embeddings/: cli.py  embed.py  embed_json.py
